base/utilities/open-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: utilities
  labels:
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: open-webui
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
